# blank_sail

./: .gitignore  CMakeLists.txt  Makefile  README!!.txt
data/: read.txt
data/fonts/: README.txt
data/scripts/: animations.txt
scripts/: compileX64.bat  compileX86.bat  devStartup.bat  devStartupX64.bat  runX64.bat  runX86.bat
src/: Animation.cpp  Animation.h  Attachment.h  Boat.cpp  Boat.h  Ent.cpp  Ent.h  Game.cpp  Game.h  GlyphManager.cpp  GlyphManager.h  Human.h  InputManager.cpp  InputManager.h  Random.cpp  Random.h  ShapeManager.cpp  ShapeManager.h  Shapes.cpp  Shapes.h  TextureManager.cpp  TextureManager.h  TextureMangr.cpp  TextureMangr.h  Timer.cpp  Timer.h  Util.h  main.cpp
